--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 }
 </style>
 <body>
-    <div id="wrap"></div>
+    <div id="wrap"></div><br>
+    <div id="fungsi"></div>
 </body>
 <script src="index.js"></script>
+<script src="fungsi.js"></script>
 </html>
