--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 </style>
 <body>
     <div id="wrap"></div><br>
-    <div id="fungsi"></div>
+    <div id="fungsi"></div><br>
+    <div id="loop"></div><br>
 </body>
 <script src="index.js"></script>
 <script src="fungsi.js"></script>
 <script src="array.js"></script>
+<script src="ifelse.js"></script>
+<script src="switch.js"></script>
+<script src="loop.js"></script>
 </html>
