--- a/DOM/index.html
+++ b/DOM/index.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>DOM Javascript</h1>
+
+    <div id="box1"></div>
+
+    <div class="boxes"></div>
+    <div class="boxes"></div>
+    <div class="boxes"></div>
+
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JS</li>
+    </ul>
+    <br>
+    <div id="box2">
+        <div id="p1">Paragraf</div>
+    </div>
 </body>
+<script src="main.js"></script>
 </html>
