--- a/OOP/index.html
+++ b/OOP/index.html
@@ -13,6 +13,9 @@
     Nama = <span id="nama"></span>
     umur = <span id="umur"></span>
     sifat = <span id="sifat"></span>
+    <br>
+    <div id="box"></div>
+    <div id="pro"></div>
 </body>
 <script src="main.js"></script>
 </html> 
